# morph

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  cliff.toml  dist-workspace.toml  release-plz.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench-results/: .gitignore  README.md
benches/: benchmarks.rs
docs/: INSTALLATION.md  MAPPING_LANGUAGE.md  MIGRATION.md  RELEASE.md
scripts/: bench-report.sh
src/: cli.rs  error.rs  lib.rs  main.rs  streaming.rs  value.rs
src/formats/: csv.rs  json.rs  jsonl.rs  mod.rs  msgpack.rs  toml.rs  xml.rs  yaml.rs
src/mapping/: ast.rs  eval.rs  functions.rs  lexer.rs  mod.rs  parser.rs
tests/: advanced_functions.rs  cli_mapping.rs  cross_format.rs  each_when.rs  exit_codes.rs  flatten_nest.rs  golden_conformance.rs  sort_operation.rs  string_functions.rs  where_filter.rs
tests/golden/expected/: json_complex_mapping.txt  json_filter_mapping.txt  json_to_json_pretty.txt  json_to_yaml.txt
tests/golden/inputs/: users.csv  users.json
