[package]
name = "morph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morph"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
quick-xml = "0.31"
rmp-serde = "1"
rmpv = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
