[package]
name = "morph"
version = "0.1.0"
edition = "2021"
description = "Universal data format converter with a mapping language"
license = "MIT"
repository = "https://github.com/alvinreal/morph"
homepage = "https://github.com/alvinreal/morph"
readme = "README.md"

[[bin]]
name = "morph"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
quick-xml = "0.31"
rmp-serde = "1"
rmpv = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-binstall support — download pre-built binaries from GitHub Releases
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/morph-{ target }.tar.xz"
bin-dir = "morph{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/morph-{ target }.zip"
pkg-fmt = "zip"
